@@ -28,8 +28,6 @@ import org.junit.jupiter.api.Test;
 import java.io.File;
 import java.io.IOException;
 import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.Iterator;
 import java.util.List;
 import java.util.Map;
@@ -132,7 +130,7 @@ public class LogSegmentsTest {
             LogSegment seg4 = createSegment(offset4);
 
             // Test firstEntry, lastEntry
-            List<LogSegment> segmentList = Arrays.asList(seg1, seg2, seg3, seg4);
+            List<LogSegment> segmentList = List.of(seg1, seg2, seg3, seg4);
             for (LogSegment seg : segmentList) {
                 segments.add(seg);
                 assertEntry(seg1, segments.firstEntry().get());
@@ -143,28 +141,28 @@ public class LogSegmentsTest {
             }
 
             // Test baseOffsets
-            assertEquals(Arrays.asList(offset1, offset2, offset3, offset4), segments.baseOffsets());
+            assertEquals(List.of(offset1, offset2, offset3, offset4), segments.baseOffsets());
 
             // Test values
-            assertEquals(Arrays.asList(seg1, seg2, seg3, seg4), new ArrayList<>(segments.values()));
+            assertEquals(List.of(seg1, seg2, seg3, seg4), new ArrayList<>(segments.values()));
 
             // Test values(to, from)
             assertThrows(IllegalArgumentException.class, () -> segments.values(2, 1));
-            assertEquals(Collections.emptyList(), segments.values(1, 1));
-            assertEquals(Collections.singletonList(seg1), new ArrayList<>(segments.values(1, 2)));
-            assertEquals(Arrays.asList(seg1, seg2), new ArrayList<>(segments.values(1, 3)));
-            assertEquals(Arrays.asList(seg1, seg2, seg3), new ArrayList<>(segments.values(1, 4)));
-            assertEquals(Arrays.asList(seg2, seg3), new ArrayList<>(segments.values(2, 4)));
-            assertEquals(Collections.singletonList(seg3), new ArrayList<>(segments.values(3, 4)));
-            assertEquals(Collections.emptyList(), new ArrayList<>(segments.values(4, 4)));
-            assertEquals(Collections.singletonList(seg4), new ArrayList<>(segments.values(4, 5)));
+            assertEquals(List.of(), segments.values(1, 1));
+            assertEquals(List.of(seg1), new ArrayList<>(segments.values(1, 2)));
+            assertEquals(List.of(seg1, seg2), new ArrayList<>(segments.values(1, 3)));
+            assertEquals(List.of(seg1, seg2, seg3), new ArrayList<>(segments.values(1, 4)));
+            assertEquals(List.of(seg2, seg3), new ArrayList<>(segments.values(2, 4)));
+            assertEquals(List.of(seg3), new ArrayList<>(segments.values(3, 4)));
+            assertEquals(List.of(), new ArrayList<>(segments.values(4, 4)));
+            assertEquals(List.of(seg4), new ArrayList<>(segments.values(4, 5)));
 
             // Test activeSegment
             assertEquals(seg4, segments.activeSegment());
 
             // Test nonActiveLogSegmentsFrom
-            assertEquals(Arrays.asList(seg2, seg3), new ArrayList<>(segments.nonActiveLogSegmentsFrom(2)));
-            assertEquals(Collections.emptyList(), new ArrayList<>(segments.nonActiveLogSegmentsFrom(4)));
+            assertEquals(List.of(seg2, seg3), new ArrayList<>(segments.nonActiveLogSegmentsFrom(2)));
+            assertEquals(List.of(), new ArrayList<>(segments.nonActiveLogSegmentsFrom(4)));
         }
     }
 
@@ -176,7 +174,7 @@ public class LogSegmentsTest {
             LogSegment seg3 = createSegment(5L);
             LogSegment seg4 = createSegment(7L);
 
-            Arrays.asList(seg1, seg2, seg3, seg4).forEach(segments::add);
+            List.of(seg1, seg2, seg3, seg4).forEach(segments::add);
 
             // Test floorSegment
             assertEquals(Optional.of(seg1), segments.floorSegment(2));
@@ -203,12 +201,12 @@ public class LogSegmentsTest {
             LogSegment seg4 = createSegment(7L);
             LogSegment seg5 = createSegment(9L);
 
-            Arrays.asList(seg1, seg2, seg3, seg4, seg5).forEach(segments::add);
+            List.of(seg1, seg2, seg3, seg4, seg5).forEach(segments::add);
 
             // higherSegments(0) should return all segments in order
             {
                 final Iterator<LogSegment> iterator = segments.higherSegments(0).iterator();
-                Arrays.asList(seg1, seg2, seg3, seg4, seg5).forEach(segment -> {
+                List.of(seg1, seg2, seg3, seg4, seg5).forEach(segment -> {
                     assertTrue(iterator.hasNext());
                     assertEquals(segment, iterator.next());
                 });
@@ -218,7 +216,7 @@ public class LogSegmentsTest {
             // higherSegments(1) should return all segments in order except seg1
             {
                 final Iterator<LogSegment> iterator = segments.higherSegments(1).iterator();
-                Arrays.asList(seg2, seg3, seg4, seg5).forEach(segment -> {
+                List.of(seg2, seg3, seg4, seg5).forEach(segment -> {
                     assertTrue(iterator.hasNext());
                     assertEquals(segment, iterator.next());
                 });
@@ -248,9 +246,9 @@ public class LogSegmentsTest {
 
             when(logSegment.size()).thenReturn(Integer.MAX_VALUE);
 
-            assertEquals(Integer.MAX_VALUE, LogSegments.sizeInBytes(Collections.singletonList(logSegment)));
-            assertEquals(largeSize, LogSegments.sizeInBytes(Arrays.asList(logSegment, logSegment)));
-            assertTrue(LogSegments.sizeInBytes(Arrays.asList(logSegment, logSegment)) > Integer.MAX_VALUE);
+            assertEquals(Integer.MAX_VALUE, LogSegments.sizeInBytes(List.of(logSegment)));
+            assertEquals(largeSize, LogSegments.sizeInBytes(List.of(logSegment, logSegment)));
+            assertTrue(LogSegments.sizeInBytes(List.of(logSegment, logSegment)) > Integer.MAX_VALUE);
 
             try (LogSegments logSegments = new LogSegments(topicPartition)) {
                 logSegments.add(logSegment);
